[workspace]
resolver = "2"
members = ["bvclient", "bvrelay", "bvserver"]

[workspace.dependencies]
log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
tun = { version = "0.7", features = ["async"] }
chacha20poly1305 = "0.10.1"
bytes = "1"

treebitmap = {path = "./libs/treebitmap"}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
