[package]
name = "bvclient"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
simple_logger = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }

tokio = { workspace = true }

clap = { workspace = true }
tun = { workspace = true }
chacha20poly1305 = { workspace = true }

bvcommon = { path = "../bvcommon" }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
